required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk): 
---------------------------- 

- Fix SLD containing a PropertyIsLike filter (#3855)

- Fixed msUnionLayerNextShape to return correct values (#3859)  

- Union layer: fix for the failure if one or more of the source layers 
  are not in the current extent (#3858)

- Fix memory leak in msResampleGDALToMap() (#3857)

- Fix missing initialization of default formats in WCS 1.x.

- Fix maxoverlapangle when value is set to 0 (#3856)

Version 6.0.0-rc1 (2011-04-27)
------------------------------

- Fix for the styleitem handling with union layer (#3674)

- Fixed mindistance label test to check layer indexes. (#3851)

- Fixed segmentation fault in PHP/MapScript and improved the php object
  method calls (#3730)

- Fix build issue related to unnecessary use of gdal-config --dep-libs (#3316)

Version 6.0.0-beta7 (2011-04-20)
--------------------------------

- Union Layer: fix for the STYLEITEM AUTO option (#3674)

- Union Layer: Add support for the layer FILTER expressions, 
  add "Union:SourceLayerVisible" predefined attribute (#3674)

- fix circle layer drawing for edge case when point1.x==point2.x (#1356)

- fix incorrect quantization for images with very large number of
  colors (#3848)

- fix poor performance of polygon hatching (#3846)

- upgrade clipper library to 4.2 (related to #3846)

- Fix configure output for "WFS Client" (was reporting WMS info, #3842)

- KML: latlon bbox for raster layers could end up being wrong for non-square
  requests (#3840)

Version 6.0.0-beta6 (2011-04-13)
--------------------------------

- define EQUAL/EQUALN macros if cpl_port.h was not included (#3844)
